// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PieChart /> renders PieChart 1`] = `
<PieChart__ContentWrapper
  height="479px"
  width="110px"
>
  <ForwardRef>
    <PieChart
      barCategoryGap="10%"
      barGap={4}
      cx="50%"
      cy="50%"
      endAngle={360}
      innerRadius={0}
      layout="centric"
      margin={
        Object {
          "bottom": 5,
          "left": 5,
          "right": 5,
          "top": 5,
        }
      }
      outerRadius="80%"
      reverseStackOrder={false}
      stackOffset="none"
      startAngle={0}
      syncMethod="index"
    >
      <Tooltip
        active={false}
        allowEscapeViewBox={
          Object {
            "x": false,
            "y": false,
          }
        }
        animationDuration={400}
        animationEasing="ease"
        content={[Function]}
        contentStyle={Object {}}
        coordinate={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        cursor={true}
        cursorStyle={Object {}}
        filterNull={true}
        isAnimationActive={true}
        itemStyle={Object {}}
        labelStyle={Object {}}
        offset={10}
        reverseDirection={
          Object {
            "x": false,
            "y": false,
          }
        }
        separator=" : "
        trigger="hover"
        useTranslate3d={false}
        viewBox={
          Object {
            "height": 0,
            "width": 0,
            "x": 0,
            "y": 0,
          }
        }
        wrapperStyle={Object {}}
      />
      <Pie
        animationBegin={400}
        animationDuration={1500}
        animationEasing="ease"
        blendStroke={false}
        cx="50%"
        cy="50%"
        data={
          Array [
            Object {
              "name": "ok",
              "value": 896,
            },
            Object {
              "name": "mixed",
              "value": 0,
            },
            Object {
              "name": "not ok",
              "value": 9768678,
            },
          ]
        }
        dataKey="value"
        endAngle={360}
        fill="#808080"
        hide={false}
        innerRadius={15}
        isAnimationActive={false}
        label={[Function]}
        labelLine={false}
        legendType="rect"
        minAngle={0}
        nameKey="name"
        outerRadius={55}
        paddingAngle={2}
        percent={true}
        startAngle={0}
        stroke="none"
      >
        <Cell
          aria-label="aria-piechart-label-vote"
          fill="#fff"
          key="0"
        />
        <Cell
          aria-label="aria-piechart-label-vote"
          fill="#000"
          key="1"
        />
        <Cell
          aria-label="aria-piechart-label-vote"
          fill="#F9F9F9"
          key="2"
        />
         
      </Pie>
    </PieChart>
  </ForwardRef>
</PieChart__ContentWrapper>
`;

exports[`<PieChart /> renders PieChart with default props 1`] = `
<PieChart__ContentWrapper
  height="95px"
  width="115px"
>
  <ForwardRef>
    <PieChart
      barCategoryGap="10%"
      barGap={4}
      cx="50%"
      cy="50%"
      endAngle={360}
      innerRadius={0}
      layout="centric"
      margin={
        Object {
          "bottom": 5,
          "left": 5,
          "right": 5,
          "top": 5,
        }
      }
      outerRadius="80%"
      reverseStackOrder={false}
      stackOffset="none"
      startAngle={0}
      syncMethod="index"
    >
      <Tooltip
        active={false}
        allowEscapeViewBox={
          Object {
            "x": false,
            "y": false,
          }
        }
        animationDuration={400}
        animationEasing="ease"
        content={[Function]}
        contentStyle={Object {}}
        coordinate={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        cursor={true}
        cursorStyle={Object {}}
        filterNull={true}
        isAnimationActive={true}
        itemStyle={Object {}}
        labelStyle={Object {}}
        offset={10}
        reverseDirection={
          Object {
            "x": false,
            "y": false,
          }
        }
        separator=" : "
        trigger="hover"
        useTranslate3d={false}
        viewBox={
          Object {
            "height": 0,
            "width": 0,
            "x": 0,
            "y": 0,
          }
        }
        wrapperStyle={Object {}}
      />
      <Pie
        animationBegin={400}
        animationDuration={1500}
        animationEasing="ease"
        blendStroke={false}
        cx="50%"
        cy="50%"
        data={
          Array [
            Object {
              "name": "ok",
              "value": 896,
            },
            Object {
              "name": "mixed",
              "value": 0,
            },
            Object {
              "name": "not ok",
              "value": 9768678,
            },
          ]
        }
        dataKey="value"
        endAngle={360}
        fill="#808080"
        hide={false}
        innerRadius={10}
        isAnimationActive={false}
        label={[Function]}
        labelLine={false}
        legendType="rect"
        minAngle={0}
        nameKey="name"
        outerRadius={45}
        paddingAngle={2}
        percent={true}
        startAngle={0}
        stroke="none"
      >
        <Cell
          aria-label="aria-piechart-label-vote"
          fill="#fff"
          key="0"
        />
        <Cell
          aria-label="aria-piechart-label-vote"
          fill="#000"
          key="1"
        />
        <Cell
          aria-label="aria-piechart-label-vote"
          fill="#F9F9F9"
          key="2"
        />
         
      </Pie>
    </PieChart>
  </ForwardRef>
</PieChart__ContentWrapper>
`;
